Frontend: Fixed back button overlapping album title

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -35,6 +35,7 @@ body,
   h1 {
     padding: 20px;
     margin: 0;
+    margin-top: 50px;
   }
   min-height: 100vh;
   display: flex;
